Added feature entry in appsettings for ResourceSerialization feature.

--- a/Application/EdFi.Ods.WebApi/appsettings.json
+++ b/Application/EdFi.Ods.WebApi/appsettings.json
@@ -84,6 +84,10 @@
             {
                 "Name": "Notifications",
                 "IsEnabled": false
+            },
+            {
+                "Name": "ResourceSerialization",
+                "IsEnabled": true
             }
         ],
         "ScheduledJobs": [
