Enable ResourceSerialization for integration test harness.

--- a/Application/EdFi.Ods.Api.IntegrationTestHarness/appsettings.json
+++ b/Application/EdFi.Ods.Api.IntegrationTestHarness/appsettings.json
@@ -60,6 +60,10 @@
       {
         "Name": "XsdMetadata",
         "IsEnabled": true
+      },
+      {
+        "Name": "ResourceSerialization",
+        "IsEnabled": true
       }
     ],
     "ExcludedExtensions": [],
