--- a/Docker/ods-api-web-api/alpine/pgsql/appsettings.template.json
+++ b/Docker/ods-api-web-api/alpine/pgsql/appsettings.template.json
@@ -76,6 +76,10 @@
           {
               "Name": "MultiTenancy",
               "IsEnabled": false
+          },
+          {
+              "Name": "ResourceSerialization",
+              "IsEnabled": true
           }
       ],
       "ScheduledJobs": [
