--- a/DatabaseTemplate/Modules/appsettings.json
+++ b/DatabaseTemplate/Modules/appsettings.json
@@ -62,6 +62,10 @@
       {
         "Name": "XsdMetadata",
         "IsEnabled": true
+      },
+      {
+        "Name": "ResourceSerialization",
+        "IsEnabled": true
       }
     ],
     "ExcludedExtensions": [],
