add install mono

--- a/.github/workflows/InitDev Postgres, Unit tests, Integration tests.yml
+++ b/.github/workflows/InitDev Postgres, Unit tests, Integration tests.yml
@@ -40,7 +40,7 @@ jobs:
 
   build:
     needs: FindStandardAndExtensionVersions
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     permissions: 
       checks: write
     strategy:
@@ -66,6 +66,15 @@ jobs:
     steps:
     - name: echo distinct ID ${{ github.event.inputs.distinct_id }}
       run:  echo "${{ github.event.inputs.distinct_id }}"    
+    - name: Install mono
+      working-directory: ./Ed-Fi-ODS-Implementation/
+      shell: pwsh
+      run: |
+           sudo apt install ca-certificates gnupg
+           sudo gpg --homedir /tmp --no-default-keyring --keyring /usr/share/keyrings/mono-official-archive-keyring.gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+           echo "deb [signed-by=/usr/share/keyrings/mono-official-archive-keyring.gpg] https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+           sudo apt update
+           sudo apt install mono-complete
     - name: Checkout Ed-Fi-ODS-Implementation
       uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
       with:
